--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </header>
     <main>
-      <section class="carousel">
+      <section class="carousel section">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
@@ -229,7 +229,52 @@
           </div>
         </div>
       </section>
-      <section class="boxhome"></section>
+      <section class="boxhome">
+        <div class="container">
+          <div class="row">
+            <div class="col-3 px-2">
+              <div class="boxhome_item color1">
+                <i class="fa fa-cogs"></i>
+                <h4>
+                  <a href="#">
+                    Engineering & Architecture
+                  </a>
+                </h4>
+              </div>
+            </div>
+            <div class="col-3 px-2">
+              <div class="boxhome_item color2">
+                <i class="fa fa-book"></i>
+                <h4>
+                  <a href="#">
+                    Learning Management
+                  </a>
+                </h4>
+              </div>
+            </div>
+            <div class="col-3 px-2">
+              <div class="boxhome_item color3">
+                <i class="fa fa-coffee"></i>
+                <h4>
+                  <a href="#">
+                    Business & Management
+                  </a>
+                </h4>
+              </div>
+            </div>
+            <div class="col-3 px-2">
+              <div class="boxhome_item color4">
+                <i class="fa fa-hourglass-half"></i>
+                <h4>
+                  <a href="#">
+                    Artificial Intelligence
+                  </a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="welcome"></section>
       <section class="class"></section>
       <section class="number"></section>
