--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </header>
     <main>
-      <section class="carousel section">
+      <section class="carousel">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
