--- a/index.html
+++ b/index.html
@@ -275,8 +275,50 @@
           </div>
         </div>
       </section>
-      <section class="welcome"></section>
-      <section class="class"></section>
+      <section class="welcome">
+       <div class="container">
+        <div class="welcome_title heading text-center">
+          <h2>
+            Welcome to
+            <span>Studious</span>
+          </h2>
+        </div>
+        <div class="welcome_content py-5">
+          <div class="container">
+            <div class="row gx-4">
+              <div class="col-4">
+                <div class="welcome_item text-center">
+                  <i class="fa fa-graduation-cap"></i>
+                  <a class="text-decoration-none text-black" href="">
+                    <h4 class="my-3">Trending Courses</h4>
+                  </a>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="welcome_item text-center">
+                  <i class="fa fa-users"></i>
+                  <a class="text-decoration-none text-black" href="">
+                    <h4 class="my-3">Certified Teachers</h4>
+                  </a>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="welcome_item text-center">
+                  <i class="fa fa-book"></i>
+                  <a class="text-decoration-none text-black" href="">
+                    <h4 class="my-3">Books & Library</h4>
+                  </a>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
+      </section>
+      <section class="course"></section>
       <section class="number"></section>
       <section class="feedback"></section>
       <section class="ins"></section>
