--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           </div>
         </div>
       </section>
-      <section class="welcome">
+      <section class="welcome section">
        <div class="container">
         <div class="welcome_title heading text-center">
           <h2>
@@ -318,7 +318,7 @@
         </div>
        </div>
       </section>
-      <section class="course">
+      <section class="course section">
         <div class="course_bg">
           <style>
             .course .course_bg {
@@ -384,7 +384,7 @@
         </div>
       </section>
       <!--  -->
-      <section class="number">
+      <section class="number section">
         <div class="container">
           <div class="number_title heading text-center">
             <h2>
@@ -414,13 +414,13 @@
       </div>
       </section>
       <!--  -->
-      <section class="feedback">
+      <section class="feedback section">
         <div class="feedback-cont">
           <div class="testimonials py-5">
             <div class="container py-md-5 py-4 HomePageTestimonials">  
-              <div class="title-heading-w3 text-center mx-auto mb-5 pb-lg-5">
-                <h3 class="title-main">
-                  Student Community <span>Feedback </span></h3>
+              <div class="title-heading-w3 heading text-center mx-auto mb-5 pb-lg-5">
+                <h2 class="title-main">
+                  Student Community <span>Feedback </span></h2>
               </div>
               <div class="row content-sec mt-md-5 justify-content-center">
                 <div class="col-lg-4 col-md-6 testi-sections">
