--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </div>
        </div>
       </section>
-      <section class="course section">
+      <section class="course">
         <div class="course_bg">
           <style>
             .course .course_bg {
@@ -591,90 +591,92 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container">
-        <div class="footer_top">
-          <div class="footer_left">
-            <p>Subscribe Us to join our Community</p>
-            <p>Newsletter</p>
+    <footer class="position-relative pt-5 ">
+      <div class="footer_content">
+        <div class="container">
+          <div class="footer_top d-flex justify-content-center align-items-center">
+            <div class="footer_left">
+              <p>Subscribe Us to join our Community</p>
+              <p>Newsletter</p>
+            </div>
+            <div class="footer_right">
+              <form class="d-flex" action="">
+                <input  type="email" placeholder="Enter your eamil">
+                <button  type="button">Send</button>
+              </form>
+            </div>
           </div>
-          <div class="footer_right">
-            <form action="">
-              <input type="email" placeholder="Enter your eamil">
-              <button type="button"></button>
-            </form>
-          </div>
-        </div>
-        <div class="footer_bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-2">
-                <div class="footer_item">
-                  <h4>ARCHIVES</h4>
-                  <ul class="py-3 px-0">
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      April 2021
-                    </a></li>
-                  </ul>
+          <div class="footer_bottom">
+            <div class="container">
+              <div class="row">
+                <div class="col-2">
+                  <div class="footer_item">
+                    <h4>ARCHIVES</h4>
+                    <ul class="py-3 px-0">
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        April 2021
+                      </a></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="col-3">
-                <div class="footer_item">
-                  <h4>CATEGORIES</h4>
-                  <ul class="py-3 px-0">
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      Business
-                    </a></li>
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      Creative
-                    </a></li>
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      Desgin
-                    </a></li>
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      Food
-                    </a></li>
-                    <li><a href="">
-                      <i class="fa fa-angle-double-right"></i>
-                      Industry
-                    </a></li>
-                  </ul>
+                <div class="col-3">
+                  <div class="footer_item">
+                    <h4>CATEGORIES</h4>
+                    <ul class="py-3 px-0">
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        Business
+                      </a></li>
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        Creative
+                      </a></li>
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        Desgin
+                      </a></li>
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        Food
+                      </a></li>
+                      <li><a href="#">
+                        <i class="fa fa-angle-double-right"></i>
+                        Industry
+                      </a></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="col-3  ">
-                <div class="footer_item icon_contact">
-                  <h4>CONTACT</h4>
-                  <ul class="py-3 px-0">
-                    <li class="pb-3"><a href="">
-                      <i class="fa fa-envelope-o"></i>
-                      info@example.com
-                    </a></li>
-                    <li class="pb-3"><a href="">
-                      <i class="fa fa-phone"></i>
-                      +44-000-888-999
-                    </a></li>
-                    <li class="pb-3">
-                      <i class="fa fa-map-marker"></i>
-                      <span>London, 235 Terry, 10001</span> 
-                    </li>
-                  </ul>
+                <div class="col-3  ">
+                  <div class="footer_item icon_contact">
+                    <h4>CONTACT</h4>
+                    <ul class="py-3 px-0">
+                      <li class="pb-3"><a href="#">
+                        <i class="fa fa-envelope-o"></i>
+                        info@example.com
+                      </a></li>
+                      <li class="pb-3"><a href="#">
+                        <i class="fa fa-phone"></i>
+                        +44-000-888-999
+                      </a></li>
+                      <li class="pb-3">
+                        <i class="fa fa-map-marker"></i>
+                        <span>London, 235 Terry, 10001</span> 
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="col-4 last_col">
-                <div class="footer_item ps-4">
-                  <h4>ABOUT</h4>
-                  <p class="text1 pt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab.</p>
-                  <div class="footer_social">
-                    <a class="fa fa-facebook" href=""></a>
-                    <a class="fa fa-linkedin" href=""></a>
-                    <a class="fa fa-twitter" href=""></a>
-                    <a class="fa fa-google-plus" href=""></a>
-                    <a class="fa fa-github" href=""></a>
+                <div class="col-4 last_col">
+                  <div class="footer_item ps-4">
+                    <h4>ABOUT</h4>
+                    <p class="text1 pt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab.</p>
+                    <div class="footer_social">
+                      <a class="fa fa-facebook" href="#"></a>
+                      <a class="fa fa-linkedin" href="#"></a>
+                      <a class="fa fa-twitter" href="#"></a>
+                      <a class="fa fa-google-plus" href="#"></a>
+                      <a class="fa fa-github" href="#"></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -682,7 +684,19 @@
           </div>
         </div>
       </div>
+      <div class="footer_copywrite">
+        <div class="container">
+          <p>© 2023 Studious. All Rights Reserved | WordPress Theme by
+            <a href="#"> W3Layouts.</a>
+          </p>
+        </div>
+      </div>
     </footer>
+
+    <!-- backtoTop  -->
+    <a class="backtoTop cd-top text-replace js-cd-top" href="#">
+      <i class="fa fa-level-up"></i>
+    </a>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
@@ -707,6 +721,9 @@
           time: 3000
       });
     </script>
+    <!-- BACK TO TOP  -->
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
     <!-- My JS  -->
     <script src="./js/index.js"></script>
   </body>
