--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
                   <i class="fa fa-search"></i>
                 </button>
               </form>
-              <div class="mode">
-                <button
-                  class="btn"
-                  id="switchButton"
-                  title="Click to switch theme"
-                >
-                  <i class="fa fa-moon-o" aria-hidden="true"></i>
-                  <i class="fa fa-sun-o" aria-hidden="true"></i>
-                </button>
-              </div>
+            </div>
+            <div class="mode">
+              <button
+                class="btn p-0"
+                id="switchButton"
+                title="Click to switch theme"
+              >
+                <i class="fa fa-moon-o" aria-hidden="true"></i>
+                <i class="fa fa-sun-o" aria-hidden="true"></i>
+              </button>
             </div>
           </div>
         </nav>
@@ -235,7 +235,7 @@
             <div class="col-3 px-2">
               <div class="boxhome_item color1">
                 <i class="fa fa-cogs"></i>
-                <h4>
+                <h4 class="m-0">
                   <a href="#">
                     Engineering & Architecture
                   </a>
@@ -245,7 +245,7 @@
             <div class="col-3 px-2">
               <div class="boxhome_item color2">
                 <i class="fa fa-book"></i>
-                <h4>
+                <h4 class="m-0">
                   <a href="#">
                     Learning Management
                   </a>
@@ -255,7 +255,7 @@
             <div class="col-3 px-2">
               <div class="boxhome_item color3">
                 <i class="fa fa-coffee"></i>
-                <h4>
+                <h4 class="m-0">
                   <a href="#">
                     Business & Management
                   </a>
@@ -265,7 +265,7 @@
             <div class="col-3 px-2">
               <div class="boxhome_item color4">
                 <i class="fa fa-hourglass-half"></i>
-                <h4>
+                <h4 class="m-0">
                   <a href="#">
                     Artificial Intelligence
                   </a>
