--- a/Contact_Page/contact.html
+++ b/Contact_Page/contact.html
@@ -128,8 +128,8 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">BLOG POSTS</a></li>
-                    <li><a class="dropdown-item" href="#">404 PAGE</a></li>
+                    <li><a class="dropdown-item" href="../Blog/blog.html">BLOG POSTS</a></li>
+                    <li><a class="dropdown-item" href="../404/404.html">404 PAGE</a></li>
                     <li><a class="dropdown-item" href="#">LANDING PAGE</a></li>
                     <li><a class="dropdown-item" href="#">ELEMENT PAGE</a></li>
                   </ul>
